Temporal fix of overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
-  position: 'relative';
+  position: relative;
   width: 100%;
   min-height: 100vh;
-  overflow: 'hidden';
+  overflow: hidden;
 }
